--- a/css/aquila.less
+++ b/css/aquila.less
@@ -4,7 +4,11 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
 
 /// Custom Mixins
-
+@gold:		#d9be6a;
+@goldD:		#B0933B;
+@goldDD:	#876C17;
+@goldL:		#FFE9A5;
+@goldLL:	#FFF2CA;
 
 /*
  * Dashicons mixin
@@ -14,9 +18,33 @@
 /// Login Page
 
 body.login {
-	background-image: url(../images/aqlHolding.jpg);
-	.bgCov;
+	background: @b1;
 	#login {
+		width: 100%;
+		&:before {
+			.icoAquila;
+			font-size: 150px;
+			line-height: 1;
+			.tac;
+			width: 100%;
+			position: relative;
+			float: left;
+			padding-top: 50px;
+			color: @gold;
+		}
+		#login_error, .message {
+		    border: none;
+		    padding: 0;
+		    margin-left: 0;
+		    background: none;
+		    color: @gold;
+		    .tac;
+		}
+		h1 {
+			a {
+				.dNI;
+			}
+		}
 		a {
 			color: @goldD;
 			.trans;
@@ -25,43 +53,102 @@ body.login {
 				color: @goldD;
 			}
 		}
-		h1 {
-			a {
-				background-image: url(../images/aqlLogo.png);
-				.w100;
-				background-size: contain;
-				margin-bottom: 0px;
-				background-position: center center;
-				background-repeat: no-repeat;
-			}
-		}
 		form {
-			-webkit-box-shadow: none;
-			box-shadow: none;
-			background: @b3;
-			background: rgba(0, 0, 0, 0.5);
+			.box-shadow(none);
+			background: @b2;
+			background: fade(white, 5%);
+			display: flex;
+			flex-direction: column;
+			p {
+				width: 320px;
+				max-width: 100%;
+				display: inline-flex;
+				margin:  0 auto;
+			}
 			input[type=checkbox]:checked:before {
 				content: "\f147";
 				color: @gold;
 			}
-		}
-		#wp-submit {
-			background: @gold;
-			border-color: @goldD;
-			-webkit-box-shadow: none;
-			box-shadow: none;
-			color: @b3;
-			text-decoration: none;
-			text-shadow: none;
-			.trans;
-			&:hover {
-				background: @goldD;
-				border-color: @gold;
-				-webkit-box-shadow: none;
-				box-shadow: none;
+			#wp-submit {
+				background: @gold;
+				border-color: @goldD;
+				.box-shadow(none);
 				color: @b3;
+				text-decoration: none;
+				text-shadow: none;
+				.trans;
+				width: 90%;
+			    margin: 5%;
+			    padding: 10px 15px;
+			    height: auto;
+			    text-transform: uppercase;
+			    font-weight: 700;
+			    letter-spacing: 1px;
+			    font-size: 14px;
+				&:hover {
+					background: @goldD;
+					border-color: @gold;
+					.box-shadow(none);
+					color: @b3;
+				}
+			}
+			.input, input[type=checkbox], input[type=text] {
+				display: block;
+				appearance: none;
+				outline: 0;
+				border: 1px solid fade(white, 40%);
+				background-color: fade(white, 20%);
+				width: 90%;
+				.border-radius(3px);
+				padding: 10px 15px;
+				margin: 0 auto 10px auto;
+				display: block;
+				.tac;
+				font-size: 18px;
+				color: white;
+				.trans;
+				font-weight: 400;
+				&:hover{
+					background-color: fade(white, 40%);
+				}
+				&:focus{
+					background-color: white;
+					width: 100%;
+					color: @goldD;
+				}
+			}
+			input[type=checkbox] {
+				width: 16px;
+				height: 16px;
+				display: inline-block;
+				line-height: 1;
+				margin-bottom: 3px;
+				margin-right: 5px;
+				&:focus{
+					background-color: fade(white, 40%);
+					width: 16px;
+				}
+			}
+			label {
+				color: fade(white, 50%);
+		    font-size: 14px;
+		    .tac;
+		    width: 100%;
+		    float: left;
+		    text-transform: uppercase;
+		    letter-spacing: 1px;
+		    line-height: 2;
 			}
 		}
+	}
+	#backtoblog, #nav {
+    font-size: 13px;
+    padding: 0 24px;
+    width: 320px;
+    max-width: 100%;
+    margin: 0 auto!important;
+    .tac;
+    padding: 10px 0 0 0;
 	}
 }
 
@@ -128,8 +215,8 @@ body.wp-admin {
 			color: #111;
 			border: none;
 			background: #ccc;
-			box-shadow: none;
-			border-radius: 0;
+			.box-shadow(none);
+			.border-radius(0px);
 		}
 		#rightnow a, #media-upload a.del-link, div.dashboard-widget-submit input, .subsubsub a, .subsubsub a.current, .ui-tabs-nav a {
 			&:hover {
@@ -138,8 +225,7 @@ body.wp-admin {
 		}
 		.postbox {
 			border: none;
-			-webkit-box-shadow: none;
-			box-shadow: none;
+			.box-shadow(none);
 			background: @bd;
 			.hndle {
 				border: none;
@@ -174,19 +260,17 @@ body.wp-admin {
 			background: @gold;
 			border: none;
 			color: @b1;
-			-webkit-box-shadow: none;
-			box-shadow: none;
+			.box-shadow(none);
 			text-shadow: none;
 			text-transform: uppercase;
 			letter-spacing: 1px;
 			font-weight: bold;
-			border-radius: 0;
+			.border-radius(0px);
 			.trans;
 			&:hover, &:focus, &:active {
 				background: @goldD;
 				color: @w;
-				-webkit-box-shadow: none;
-				box-shadow: none;
+				.box-shadow(none);
 				text-shadow: none;
 			}
 			&[disabled], &:disabled, &.button-primary-disabled {
@@ -220,7 +304,7 @@ body.wp-admin {
 			background: @b3;
 			color: @w;
 			border: none;
-			border-radius: 0;
+			.border-radius(0px);
 			.trans;
 			&:hover {
 				background: @goldD;
@@ -259,7 +343,7 @@ body.wp-admin {
 		}
 		table.widefat {
 			border: none;
-			box-shadow: none;
+			.box-shadow(none);
 			ol, p, tfoot tr td, tfoot tr th, thead tr td, thead tr th, ul {
 				color: @b1;
 			}
@@ -289,7 +373,7 @@ body.wp-admin {
 				color: @b1;
 				.show-settings {
 					border: none;
-					box-shadow: none;
+					.box-shadow(none);
 					color: @b1;
 				}
 			}
@@ -353,7 +437,7 @@ body.wp-admin {
 		div.wp-menu-image:before, #collapse-button div:after {
 			color: @gold;
 			width: 100%;
-			text-align: center;
+			.tac;
 			text-indent: -2px;
 		}
 		#menu-dashboard {
@@ -409,7 +493,7 @@ body.wp-admin {
 	#adminmenu li.wp-has-current-submenu div.wp-menu-image:before {
 		color: @b1;
 	/* Admin Menu: bubble */ }
-	#adminmenu .awaiting-mod, #adminmenu .update-plugins {
+	#adminmenu .awaiting-mod, #adminmenu .update-plugins, #adminmenu li a.wp-has-current-submenu .update-plugins, #adminmenu li.current a .awaiting-mod {
 		color: @b1;
 		background: @goldD;
 	}
@@ -423,10 +507,10 @@ body.wp-admin {
 	}
 	#collapse-button div:after {
 		color: @gold;
-		opacity: 0.5;
+		.opacity(0.5);
 	}
 	#collapse-menu:hover #collapse-button div:after {
-		opacity: 1;
+		.opacity(1);
 		color: @gold;
 	}
 	.wp-pointer .wp-pointer-content h3 {
@@ -442,11 +526,11 @@ body.wp-admin {
 		background-color: @gold;
 	}
 	.details.attachment {
-		box-shadow: 0 0 0 1px @w, 0 0 0 5px @gold;
+		.box-shadow(0 0 0 1px @w, 0 0 0 5px @gold);
 	}
 	.attachment.details .check {
 		background-color: @gold;
-		box-shadow: 0 0 0 1px @w, 0 0 0 2px @gold;
+		.box-shadow(0 0 0 1px @w, 0 0 0 2px @gold);
 	/* Themes */ }
 	.theme-browser .theme.active .theme-name, .theme-browser .theme.add-new-theme:hover:after {
 		background: @gold;
@@ -460,8 +544,7 @@ body.wp-admin {
 	.wp-slider .ui-slider-handle, .wp-slider .ui-slider-handle.ui-state-hover, .wp-slider .ui-slider-handle.focus {
 		background: @gold;
 		border-color: @goldD;
-		-webkit-box-shadow: inset 0 1px 0 #de4146, 0 1px 0 rgba(0, 0, 0, .15);
-		box-shadow: inset 0 1px 0 #de4146, 0 1px 0 rgba(0, 0, 0, .15);
+		.box-shadow(inset 0 1px 0 #de4146, 0 1px 0 rgba(0, 0, 0, .15));
 	/* Responsive Component */ }
 	div#wp-responsive-toggle a:before {
 		color: @bf3;
@@ -483,14 +566,14 @@ body.wp-admin {
 		}
 	}
 	li#toplevel_page_aquila-options .wp-menu-image img {
-		opacity: 1;
+		.opacity(1);
 	}
 	#wpcontent {
 		&:before {
 			//content: "Aquila ";
 			.icoAquila;
 			font-size: 1000px;
-			position: absolute;
+			position: fixed;
 			color: rgba(34, 34, 34, 0.05);
 			top: 400px;
 			left: -300px;
@@ -583,21 +666,9 @@ html.wp-toolbar {
 		color: @w;
 		background: @b3;
 	}
-	 #adminbarsearch .adminbar-input::-webkit-input-placeholder {
-	 color: @w;
-	 opacity: 0.7;
-	}
-	 #adminbarsearch .adminbar-input:-moz-placeholder {
-	 color: @w;
-	 opacity: 0.7;
-	}
-	 #adminbarsearch .adminbar-input::-moz-placeholder {
-	 color: @w;
-	 opacity: 0.7;
-	}
-	#adminbarsearch .adminbar-input:-ms-input-placeholder {
+	 #adminbarsearch .adminbar-input::-webkit-input-placeholder, #adminbarsearch .adminbar-input:-moz-placeholder, #adminbarsearch .adminbar-input::-moz-placeholder, #adminbarsearch .adminbar-input:-ms-input-placeholder {
 	color: @w;
-	opacity: 0.7;
+	.opacity(0.7);
 	}
 	 
 	/* Admin Bar: my account */
@@ -713,8 +784,7 @@ body.folded {
 		height: 50px;
 		#collapse-button {
 			margin: 0;
-			-webkit-border-radius: 0;
-			border-radius: 0;
+			.border-radius(0px);
 			width: 100%;
 			height: 100%;
 			div {
@@ -770,7 +840,7 @@ body.folded {
 						font-size: 40px;
 						width: 50px;
 						display: block;
-						text-align: center;
+						.tac;
 						height: 50px;
 						overflow: hidden;
 						line-height: 1.3;
@@ -797,8 +867,7 @@ body.folded {
 				height: 50px;
 				#collapse-button {
 					margin: 0;
-					-webkit-border-radius: 0;
-					border-radius: 0;
+					.border-radius(0px);
 					width: 100%;
 					height: 100%;
 					div {
