--- a/css/mix.less
+++ b/css/mix.less
@@ -32,11 +32,12 @@
 @b08:			rgba(0, 0, 0, 0.8);
 @b09:			rgba(0, 0, 0, 0.9);
 
-.fontAwesome { font-family: FontAwesome!important; }
+.fontAwesome { font-family: "fontAwesome"!important; }
+.menuFA { font-family: "fontAwesome" !important;font-size: 16px;margin-top: 0px;float: left; line-height: 1.3; }
 .serif { font-family: 'Merriweather', serif!important; }
 .sans { font-family: 'Raleway', sans-serif!important; }
 .bgCov { background-size: cover; background-position: center center; background-repeat: repeat; }
-.icoAquila { font-family: "aquila-icons" !important; content: "\61"!important; font-size: 30px; }
+.icoAquila { font-family: "Aquila" !important; content: "\a002"; font-size: 20px; line-height: 1; }
 
 
 // Text
