--- a/icons/styles.css
+++ b/icons/styles.css
@@ -1,49 +1,36 @@
-@charset "UTF-8";
-
 @font-face {
-  font-family: "aquila-icons";
-  src:url("fonts/aquila-icons.eot");
-  src:url("fonts/aquila-icons.eot?#iefix") format("embedded-opentype"),
-    url("fonts/aquila-icons.woff") format("woff"),
-    url("fonts/aquila-icons.ttf") format("truetype"),
-    url("fonts/aquila-icons.svg#aquila-icons") format("svg");
-  font-weight: normal;
-  font-style: normal;
-
+    font-family: 'Aquila';
+    src:    url('fonts/Aquila.eot?mvknes');
+    src:    url('fonts/Aquila.eot?mvknes#iefix') format('embedded-opentype'),
+        url('fonts/Aquila.ttf?mvknes') format('truetype'),
+        url('fonts/Aquila.woff?mvknes') format('woff'),
+        url('fonts/Aquila.svg?mvknes#Aquila') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
-[data-icon]:before {
-  font-family: "aquila-icons" !important;
-  content: attr(data-icon);
-  font-style: normal !important;
-  font-weight: normal !important;
-  font-variant: normal !important;
-  text-transform: none !important;
-  speak: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+[class^="aquila-"], [class*=" aquila-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'Aquila' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-[class^="aql-"]:before,
-[class*=" aql-"]:before,
-[class*=" dashicons-aql-"]:before {
-  font-family: "aquila-icons" !important;
-  font-style: normal !important;
-  font-weight: normal !important;
-  font-variant: normal !important;
-  text-transform: none !important;
-  speak: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.aquila-magento:before {
+    content: "\a003";
+}
+.aquila-mito:before {
+    content: "\a001";
+}
+.aquila-aquila:before {
+    content: "\a002";
 }
 
-.aql-aquila:before,
-.dashicons-aql-aquila:before {
-  content: "\61";
-}
-.aql-mito:before,
-.dashicons-aql-mito:before {
-  content: "\6d";
-}
